fixed links to papers. Open new tabs for contact info.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Matúš Falis, Hang Dong, Alexandra Birch, Beatrice Alex<br />
 								<p><strong>CoPHE: A Count-Preserving Hierarchical Evaluation Metric in Large-Scale Multi-Label Text Classification</strong><br />
 Matúš Falis, Hang Dong, Alexandra Birch, Beatrice Alex<br />
 <em>EMNLP 2021 </em><br />
-<a href="https://aclanthology.org/D19-6220.pdf" target="_blank">[pdf]</a>
+<a href="https://aclanthology.org/2021.emnlp-main.69.pdf" target="_blank">[pdf]</a>
 <p>
 <p><strong>Paying Per-label Attention for Multi-label Extraction from Radiology Reports</strong><br />
 Patrick Schrempf, Hannah Watson, Shadia Mikhael, Maciej Pajak, Matúš Falis, Aneta Lisowska, Keith W Muir, David Harris-Birtill, Alison Q O’Neil<br />
@@ -107,9 +107,9 @@ Thorsten Merte, Matúš Falis, Paul Hübner,  Thomas Quirchmayr, Simone Bürsner
 								<p>Office: Room 3.34, Informatics Forum, 10 Crichton Street, Edinburgh, EH8 9AB</p>
 
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/mat%C3%BA%C5%A1-falis-206555a6/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://github.com/modr00cka" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://twitter.com/matt_falis" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/mat%C3%BA%C5%A1-falis-206555a6/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://github.com/modr00cka" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/matt_falis" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 								</ul>
 							</article>
 
