added full stop

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
 								<center><span class="image main"><img src="images/pic01.jpg" style="width:220px;height:284px;" alt="" /></span></center>
-								<p>I am a PhD student in the <a href="https://web.inf.ed.ac.uk/ilcc" target="_blank">Institute of Language Cognition and Computation</a> at <a href="https://www.ed.ac.uk/" target="_blank">the University of Edinburgh</a> supervised by <a href="https://homepages.inf.ed.ac.uk/balex/" target="_blank"> Doctor Beatrice Alex</a> and <a href="https://sites.google.com/view/alexandra-birch/" target='_blank'>Doctor Alexandra Birch.</a> I am a member of the <a href = "https://web.inf.ed.ac.uk/cdt/biomedical-ai" target="_blank">CDT in Biomedical AI</a><p>
+								<p>I am a PhD student in the <a href="https://web.inf.ed.ac.uk/ilcc" target="_blank">Institute of Language Cognition and Computation</a> at <a href="https://www.ed.ac.uk/" target="_blank">the University of Edinburgh</a> supervised by <a href="https://homepages.inf.ed.ac.uk/balex/" target="_blank"> Doctor Beatrice Alex</a> and <a href="https://sites.google.com/view/alexandra-birch/" target='_blank'>Doctor Alexandra Birch.</a> I am a member of the <a href = "https://web.inf.ed.ac.uk/cdt/biomedical-ai" target="_blank">CDT in Biomedical AI</a>.<p>
 <p> My research focuses on Large-Scale Multi-Label Document Classification in the medical domain in the task of Automatic ICD Coding of discharge summaries. <p>
 <p> Prior to my PhD studies, I worked as a research engineer at Canon Medical Research Europe. My undergraduate degree was an integrated Master of Informatics at the University of Edinburgh. A full CV is available upon request.<p>
 
