changed a reference to Sunday Tea.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Thorsten Merte, Matúš Falis, Paul Hübner,  Thomas Quirchmayr, Simone Bürsner
 </p>							</article>
 
 						<!-- About -->
-							<article id="about">
+							<article id="sunday_tea">
 								<h2 class="major">Sunday Tea</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Sunday Tea is an iniative designed to promote honest and open in-person communication.</p>  
