changed article id for the Research page.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="research">
 								<h2 class="major">Research</h2>
 								<p> My research focuses on incorporating external biomedical knowledge (e.g., the International Classification of Diseases ontology) into deep learning methods. This includes adjustments in data preparation (through augmentation and synthesis based on external knowledge), evaluation, and architecture-building.
 								<p><strong>Automated Clinical Coding: What, Why, and Where We Are?</strong><br />
