--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Research</a></li>
-								<li><a href="#about">Sunday Tea</a></li>
+								<li><a href="#research">Research</a></li>
+								<li><a href="#sunday_tea">Sunday Tea</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
